.k8s/overlays/dns_prod/setup/gateway-frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "genzen.info"
        - "*.genzen.info"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: genzen-info-tls
        minProtocolVersion: TLSV1_2
      hosts:
        - "genzen.info"
        - "*.genzen.info"
